Fixed whitespace between navbar and slider

--- a/css/fixes.css
+++ b/css/fixes.css
@@ -33,6 +33,10 @@
     padding: 0px !important;
   }
 
+  #header-main-sticky-wrapper{
+    height: 64px !important;
+  }
+
 
 }
 @media (max-width:641px) { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
